--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/_style.scss">
+    <link rel="stylesheet" href="./css/main.scss">
     <script type="module" src="./js/index.js" prefer></script>
     <title>Document</title>
 </head>
