--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.scss">
-    <script type="module" src="./js/index.js" prefer></script>
-    <title>Document</title>
+    <%- injectScript %>
+    <title><%- title %></title>
 </head>
 <body>
     
